# credit-default-mlops-pipeline

./: .dockerignore  .env.example  .gitignore  Dockerfile  README (1).md:Zone.Identifier  README.md  api.py  docker-compose.monitoring.yml  docker-compose.yml  evaluate.py  predict.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  train.py
.github/workflows/: ci.yml
configs/: config.yaml
data/: sampleEntry.csv:Zone.Identifier
docs/: ARCHITECTURE.md  Demo_Checklist.md  MONITORING.md  USAGE.md
infra/mlflow/: Dockerfile
monitoring/grafana/dashboards/: fastapi.json
monitoring/grafana/provisioning/dashboards/: provider.yml
monitoring/prometheus/: prometheus.yml
tests/: conftest.py  test_api.py  test_api_integration.py
